<resources>
    <!-- Application -->
    <string name="app_name" translatable="false">HellWeather</string>

    <!-- Transitions -->
    <string name="hourly_details_transition" translatable="false">hourly_details</string>
    <string name="daily_details_transition" translatable="false">daily_details</string>
    <string name="weather_card_details_transition" translatable="false">weather_card_details_transition</string>

    <!-- Data display -->
    <string name="chip_min_max_temp" translatable="false">%1$d / %2$d C°</string>
    <string name="value_in_percents" translatable="false">%1$d %%</string>
    <string name="value_as_temp" translatable="false">%1$d °C</string>
    <string name="value_as_pressure" translatable="false">%1$d hPa</string>
    <string name="feels_like" translatable="false">Feels like %1$d °C</string>
    <string name="date_start" translatable="false">Start at %1$s</string>
    <string name="date_end" translatable="false">End at %1$s</string>
    <string name="sender" translatable="false">Sender: %1$s</string>

    <!-- Actions-->
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="loading">Loading…</string>
    <string name="not_available" translatable="false">N/A</string>
    <string name="try_again">Try again</string>
    <string name="connection_lost">Connection lost</string>
    <string name="error">Error</string>
    <string name="no_locations">No locations</string>
    <string name="delete_location_text">Do you want to delete this location?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="action_continue">Continue</string>
    <string name="enter_location">Enter your location</string>
    <string name="location_name">Location name</string>
    <string name="find_me">Find me</string>
    <string name="lets_start">Let\'s start</string>
    <string name="welcome_text">We thank you for choosing our application</string>
    <string name="access_denied">Access denied</string>
    <string name="city_not_found">City not found</string>
    <string name="server_not_responding">Server not responding</string>
    <string name="not_funny">Not funny</string>
    <string name="gps_is_disabled">GPS is disabled. Turn it on and try again</string>
    <string name="thats_right">That\'s right?</string>
    <string name="lat_lon_text">Lat.: %1$s, lon.: %2$s</string>
    <string name="location_deleted">Location deleted</string>
    <string name="searching">Searching…</string>
    <string name="search">Search</string>
    <string name="add_new_location">Add new location</string>
    <string name="failed_to_find_device_location">Failed to find device location</string>
    <string name="delete">Delete</string>

    <!-- Tittles-->
    <string name="tittle_welcome">Welcome</string>
    <string name="tittle_home">Home</string>
    <string name="tittle_search">Search city</string>
    <string name="tittle_location_manager">Location manager</string>
    <string name="tittle_foreground_service">Foreground service</string>
    <string name="tittle_customize">Customize</string>
    <string name="tittle_settings">Settings</string>
    <string name="tittle_info">Info</string>

    <!-- Categories -->
    <string name="hourly_forecast">Hourly forecast</string>
    <string name="next_48_hours">Next 48 hours</string>
    <string name="next_24_hours">Next 24 hours</string>
    <string name="next_12_hours">Next 12 hours</string>

    <string name="details">Details</string>

    <string name="chance_of_rain">Chance of rain</string>
    <string name="chance_of_rain_in_percents">Chance of rain (in %)</string>

    <string name="daily_forecast">Daily forecast</string>
    <string name="next_7_days">Next 7 days</string>
    <string name="next_14_days">Next 14 days</string>

    <string name="general">General</string>
    <string name="customization">Customization</string>

    <!-- Confirmation -->
    <string name="country_and_location_name" translatable="false">%1$s, %2$s</string>
    <string name="gmt" translatable="false">%1$d GMT</string>
    <string name="plus_gmt" translatable="false">+%1$d GMT</string>

    <!-- Home -->
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="uv_index">UV index</string>
    <string name="visibility">Visibility</string>
    <string name="direction">Direction — </string>
    <string name="gust">Gust — </string>

    <string name="temp_kelvin" translatable="false">%1$sK</string>
    <string name="temp_celsius" translatable="false">%1$s°C</string>
    <string name="temp_fahrenheit" translatable="false">%1$s°F</string>

    <string name="feels_about_the_same">Feels about the same</string>

    <string name="now"> Now </string>

    <string name="dew_point_now_kelvin_text">Dew point now — %1$sK</string>
    <string name="dew_point_now_celsius_text">Dew point now — %1$s°C</string>
    <string name="dew_point_now_fahrenheit_text">Dew point now — %1$s°F</string>

    <string name="pressure_text">%1$d\nmmHg</string>

    <string name="wind_speed_text">%1$s m/s</string>
    <string name="wind_direction_text">Direction — %1$s°</string>
    <string name="wind_gust_text">Gust — %1$s m/s</string>

    <string name="item_temp_kelvin" translatable="false">%1$sK</string>
    <string name="item_temp_degree" translatable="false">%1$s°</string>

    <string name="top_tittle_degree_text" translatable="false">%1$s° | %2$s</string>
    <string name="top_tittle_kelvin_text" translatable="false">%1$sK | %2$s</string>

    <string name="visibility_text">%1$d km</string>

    <string name="humidity_text" translatable="false">%1$s\%%</string>

    <string name="pop_text" translatable="false">%1$s\%%</string>

    <string name="temp_feels_like_degree_text" translatable="false">%1$s°</string>
    <string name="temp_feels_like_kelvin_text" translatable="false">%1$sK</string>

    <string name="max_min_kelvin_text">Max.: %1$sK, min.: %2$sK</string>
    <string name="max_min_degree_text">Max.: %1$s°, min.: %2$s°</string>

    <!-- Units -->
    <string name="meters_per_second">m/s</string>
    <string name="kilometres">km</string>

    <string name="degree" translatable="false">°</string>
    <string name="percent" translatable="false">%</string>

    <string name="kelvin" translatable="false">K</string>
    <string name="celsius" translatable="false">°C</string>
    <string name="fahrenheit" translatable="false">°F</string>

    <string name="mm_hg">mmHg</string>

    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very high</string>
    <string name="extreme">Extreme</string>

    <!-- Helper texts -->
    <string name="after_n_hours">*after N hours</string>
    <string name="values_in_percents">values in %</string>

    <!-- Snakbar texts -->
    <string name="on_failure">Failure. Please, check your internet connection</string>

    <!-- Settings -->
    <string name="language">Language</string>
    <string name="units">Units</string>
    <string name="theme">Theme</string>
    <string name="mode">Mode</string>

    <!-- Foreground Service -->
    <string name="service">Service</string>
    <string name="options">Options</string>
    <string name="location">Location</string>
    <string name="update_time">Update time</string>

    <string name="max">Max.</string>
    <string name="min">min.</string>

    <!-- Info -->
    <string name="version">Version: %1$s</string>
    <string name="codename">Codename: %1$s</string>
    <string name="github_hellweather" translatable="false">https://github.com/HellGuy39/HellWeather</string>
    <string name="author" translatable="false">HellGuy39</string>
    <string name="dev_year" translatable="false">2022</string>
</resources>