<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_round_cloud_queue_24"
            android:title="@string/tittle_home" />

        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_outline_search_24"
            android:title="@string/tittle_search" />

        <item
            android:id="@+id/locationManagerFragment"
            android:icon="@drawable/ic_outline_location_city_24"
            android:title="@string/tittle_location_manager" />

        <item
            android:id="@+id/serviceFragment"
            android:icon="@drawable/ic_round_ad_units_24"
            android:title="@string/tittle_foreground_service" />


        <item
            android:id="@+id/customizeFragment"
            android:icon="@drawable/ic_outline_format_paint_24"
            android:title="@string/tittle_customize" />


    </group>

</menu>